--- a/index.html
+++ b/index.html
@@ -10,7 +10,95 @@
 
 </head>
 
+
 <body>
-  <h1>hello world!!!!!!</h1>
+
+  <div id="HeaderContainer">
+    <div class="Header">
+      <a href="about.html" class="linkunder">About</a>
+      <a href="index.html"><img src="images/vy.png" id="logo" width="50px"/></a>
+      <a href="contact.html" class="linkunder">Contact</a>
+    </div>
+  </div>
+
+
+  <div class="Main">
+
+    <div class="MainGroupOne" data-bg-text="V">
+      <div class="ContentOne">
+        <div class="OneText">
+          <h2>Hi, we're <span class="underline victoria"><a href="about.html" style="cursor:help;">ultraviolet</a>
+            </span>
+          </h2>
+          <p class="col-md-6 col-sm-8 mx-auto">We're a design studio focused on delivering delightful digital products and experiences.</p>
+        </div>
+      </div>
+
+    </div>
+
+
+
+    <div class="MainGroupFour">
+      <div class="ContentFour">
+        <h1><span class="overline">All work</span></h1>
+
+
+        <div class="wideCard row" id="dailyuicard">
+            <div class="col-md-6 order-md-1 card_text">
+              <div class="card_category"><h5>Product/UX Design</h5></div>
+              <div class="card_title"><h2>News App Design</h2></div>
+              <div class="card_description"><p>Designing an experience to help make it easier to develop well-rounded news reading habits.</p></div>
+              <div class="card_link"><a href="news.html">Read more <span class="arrow">&xrarr;</span></a></div>
+            </div>
+
+          </div>
+
+
+
+        <div class="wideCard row" id="courseracard">
+          <div class="col-md-6 card_text">
+            <div class="card_category"><h5>UX Design</h5></div>
+            <div class="card_title"><h2>Coursera Redesign</h2></div>
+            <div class="card_description"><p>Exploring ways to make Coursera's platform more conducive to social learning.</p></div>
+            <div class="card_link"><a href="coursera.html">Read more <span class="arrow">&xrarr;</span></a></div>
+          </div>
+        </div>
+
+
+
+
+        <div class="wideCard row" id="inacard">
+          <div class="col-md-6 order-md-1 card_text">
+            <div class="card_category"><h5>UX Research/Design</h5></div>
+            <div class="card_title"><h2>INA: Conversational User Interface Design</h2></div>
+            <div class="card_description"><p>A design for a voice-based CUI to support and facilitate healthy eating habits.</p></div>
+            <div class="card_link"><a href="ina.html">Read more <span class="arrow">&xrarr;</span></a></div>
+          </div>
+
+        </div>
+
+
+
+
+
+
+  </div>
+  <br/><br/><br/><br/><br/>
+
+  <!-- <div class="background" id="background1"></div> -->
+  <div id="bgcontainer">
+    <div class="background" id="background2"></div>
+    <!-- <div class="background" id="background3"></div> -->
+  </div>
+  <div id="left"></div>
+  <div id="right"></div>
+  <div id="top"></div>
+  <div id="bottom"></div>
+
+
 </body>
+
+
+
+
 </html>
