--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
 
   <title>ultraviolet</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
@@ -13,28 +15,38 @@
 
 <body>
 
-  <div id="HeaderContainer">
+  <div id="HeaderContainer" style="padding-top:10px;background-color:transparent;">
     <div class="Header">
-      <a href="about.html" class="linkunder">About</a>
-      <a href="index.html"><img src="images/vy.png" id="logo" width="50px"/></a>
-      <a href="contact.html" class="linkunder">Contact</a>
+      <a href="about.html" class="linkunder" style="color:white;">About</a>
+      <a href="index.html"><img src="images/vywhite.png" id="logo" width="50px"/></a>
+      <a href="contact.html" class="linkunder" style="color:white;">Contact</a>
     </div>
   </div>
 
 
-  <div class="aboutone row">
-    <div class="col-md-6 col-sm-12 aboutimg">
-      <img src="images/about2.png">
-    </div>
-    <div class="col-md-6 col-sm-12 abouttxt">
-      <h1>Hi, we're ultraviolet.</h1>
-      <br/>
-      <p><i>ultraviolet</i> is a creative studio focused on making digital products and experiences. We're here to use our powers for good and make the world a better place, one experience at a time.</p>
 
-    </div>
+
+  <div class="aboutmain">
+
+              <div id="morphing"> <svg width="100%" height="100%" viewBox="0 200 1431 661">
+                    <g fill="none" fill-rule="evenodd">
+                      <g fill="#33537A" fill-opacity="1" transform="translate(0 6)">
+                        <path class="polymorph" d="M166,30 C18.9474046,101.510557 -61.5436506,470.985604 60.5,568.5 C182.543651,666.014396 352.5,652.5 502,711.19349 C651.5,769.88698 873,793.69349 1026.5,656 C1180,518.30651 1360.58854,465.847907 1384.5,379.195685 C1408.41146,292.543462 1337.56421,138.608962 1254.03433,62.0976665 C1170.50446,-14.4136286 784.366348,87.1013577 656.320551,62.0976665 C528.274754,37.0939753 313.052595,-41.5105568 166,30 Z"></path>
+                      </g>
+                    </g>
+              </svg> </div>
+
+      <div class="aboutone row" style="width:80%;padding:100px;">
+        <div class="col-md-6 col-sm-12 abouttxt">
+          <h1>Hi, we're ultraviolet.</h1>
+          <br/>
+          <p><i>ultraviolet</i> is a creative studio focused on making digital products and experiences. We're here to use our powers for good and make the world a better place, one experience at a time.</p>
+
+        </div>
+
+      </div>
+
   </div>
-
-
 
 
 
