--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
   <title>ultraviolet</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
@@ -43,42 +45,83 @@
         <h1><span class="overline">All work</span></h1>
 
 
-        <div class="wideCard row" id="dailyuicard">
-            <div class="col-md-6 order-md-1 card_text">
-              <div class="card_category"><h5>Product/UX Design</h5></div>
-              <div class="card_title"><h2>News App Design</h2></div>
-              <div class="card_description"><p>Designing an experience to help make it easier to develop well-rounded news reading habits.</p></div>
-              <div class="card_link"><a href="news.html">Read more <span class="arrow">&xrarr;</span></a></div>
+                <div class="wideCard row" id="dailyuicard">
+                    <div class="col-md-6 order-md-2 card_graphics card_graphics0">
+                      <div class="card_image">
+                        <img src="images/news.png" alt="news app mockup" />
+                      </div>
+
+                      <div id="morphing"> <svg width="100%" height="100%" viewbox="0 0 530 510">
+                            <g fill="none" fill-rule="evenodd">
+                              <g fill="#EB7C6E" fill-opacity=".15" transform="translate(0 6)">
+                                <path class="polymorph0" d="M238.272204,0.472936785 C319.32619,0.472936785 388.170478,82.7215699 437.615003,140.14786 C487.059527,197.57415 517.936277,240.998471 466.405485,297.836708 C414.874694,354.674946 395.653145,398.136424 287.5,405 C179.346855,411.863576 -82.4913249,295.929724 26.5161184,140.14786 C135.523562,-15.6340034 157.218219,0.472936785 238.272204,0.472936785 Z"></path>
+                              </g>
+                            </g>
+                      </svg> </div>
+
+                    </div>
+                    <div class="col-md-6 order-md-1 card_text">
+                      <div class="card_category"><h5>Product/UX Design</h5></div>
+                      <div class="card_title"><h2>News App Design</h2></div>
+                      <div class="card_description"><p>Designing an experience to help make it easier to develop well-rounded news reading habits.</p></div>
+                      <div class="card_link"><a href="news.html">Read more <span class="arrow">&xrarr;</span></a></div>
+                    </div>
+
+                  </div>
+
+
+
+                <div class="wideCard row" id="courseracard">
+                  <div class="col-md-6 card_graphics card_graphics1">
+                    <div class="card_image">
+                      <img src="images/mockup.png" alt="mockup" />
+                    </div>
+
+                    <div id="morphing"> <svg width="100%" height="100%" viewbox="0 0 530 510">
+                          <g fill="none" fill-rule="evenodd">
+                            <g fill="#33537A" fill-opacity=".15" transform="translate(0 6)">
+                              <path class="polymorph1" d="M401.445044,104.795283 C287.393052,20.2674518 83.3000132,-88.2682847 22.2721929,195.825256 C-38.7556274,479.918797 120.316888,556.443993 302.399893,458.411715 C484.482897,360.379437 522,323.867415 522,269.849629 C522,215.831843 515.497036,189.323115 401.445044,104.795283 Z" id="Path-4"></path>
+                            </g>
+                          </g>
+                    </svg> </div>
+
+                  </div>
+                  <div class="col-md-6 card_text">
+                    <div class="card_category"><h5>UX Design</h5></div>
+                    <div class="card_title"><h2>Coursera Redesign</h2></div>
+                    <div class="card_description"><p>Exploring ways to make Coursera's platform more conducive to social learning.</p></div>
+                    <div class="card_link"><a href="coursera.html">Read more <span class="arrow">&xrarr;</span></a></div>
+                  </div>
+                </div>
+
+
+
+
+                <div class="wideCard row" id="inacard">
+                  <div class="col-md-6 order-md-2 card_graphics card_graphics2">
+                    <div class="card_image">
+                      <img src="images/ina.png" alt="ina" />
+                    </div>
+
+                    <div id="morphing"> <svg width="100%" height="100%" viewbox="0 0 530 510">
+                          <g fill="none" fill-rule="evenodd">
+                            <g fill="#8F9130" fill-opacity=".15" transform="translate(0 6)">
+                              <path class="polymorph2" d="M127.546378,38.2125413 C25.5463782,64.2125413 56.5463782,130.212541 14.5463782,295.212541 C-6.68386292,378.61706 71.2300914,384.45368 146.334786,406.712541 C219.810467,428.48861 297.822106,518.567499 364.334786,457 C498.834786,332.5 407.546378,260.212541 396.046378,153.712541 C384.546378,47.2125413 229.546378,12.2125413 127.546378,38.2125413 Z"></path>
+                            </g>
+                          </g>
+                    </svg> </div>
+
+                  </div>
+                  <div class="col-md-6 order-md-1 card_text">
+                    <div class="card_category"><h5>UX Research/Design</h5></div>
+                    <div class="card_title"><h2>INA: Conversational User Interface Design</h2></div>
+                    <div class="card_description"><p>A design for a voice-based CUI to support and facilitate healthy eating habits.</p></div>
+                    <div class="card_link"><a href="ina.html">Read more <span class="arrow">&xrarr;</span></a></div>
+                  </div>
+
+                </div>
             </div>
-
           </div>
-
-
-
-        <div class="wideCard row" id="courseracard">
-          <div class="col-md-6 card_text">
-            <div class="card_category"><h5>UX Design</h5></div>
-            <div class="card_title"><h2>Coursera Redesign</h2></div>
-            <div class="card_description"><p>Exploring ways to make Coursera's platform more conducive to social learning.</p></div>
-            <div class="card_link"><a href="coursera.html">Read more <span class="arrow">&xrarr;</span></a></div>
-          </div>
-        </div>
-
-
-
-
-        <div class="wideCard row" id="inacard">
-          <div class="col-md-6 order-md-1 card_text">
-            <div class="card_category"><h5>UX Research/Design</h5></div>
-            <div class="card_title"><h2>INA: Conversational User Interface Design</h2></div>
-            <div class="card_description"><p>A design for a voice-based CUI to support and facilitate healthy eating habits.</p></div>
-            <div class="card_link"><a href="ina.html">Read more <span class="arrow">&xrarr;</span></a></div>
-          </div>
-
-        </div>
-
-
-
 
 
 
