--- a/news.html
+++ b/news.html
@@ -6,6 +6,8 @@
 
   <title>ultraviolet</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
