--- a/index.html
+++ b/index.html
@@ -10,6 +10,64 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="anime.min.js" type="text/javascript"></script>
+  <script src="jquery.waypoints.min.js" type="text/javascript"></script>
+  <script type="text/javascript">
+
+  jQuery(document).ready(function(){
+      $('#lineDrawing').waypoint(function() {
+        var lineDrawing = anime({
+          targets: '#lineDrawing .lines path',
+          strokeDashoffset: [anime.setDashoffset, 0],
+          easing: 'easeInOutSine',
+          duration: 1200,
+          delay: function(el, i) { return i * 250 },
+          direction: 'alternate',
+          loop: false
+        });
+      }, {
+              offset: '75%'
+      });
+      $('#lineDrawing2').waypoint(function() {
+        var lineDrawing = anime({
+          targets: '#lineDrawing2 .lines path',
+          strokeDashoffset: [anime.setDashoffset, 0],
+          easing: 'easeInOutSine',
+          duration: 1200,
+          delay: function(el, i) { return i * 250 },
+          direction: 'alternate',
+          loop: false
+        });
+      }, {
+              offset: '100%'
+      });
+  });
+
+  </script>
+
+  <script>
+
+
+  window.onscroll = function() {scrollFunction()};
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
+        // document.getElementById("HeaderContainer").style.padding = "5px 0px";
+        document.getElementById("logo").style.width = "30px";
+      } else {
+        // document.getElementById("HeaderContainer").style.padding = "80px 10px";
+        document.getElementById("logo").style.width = "50px";
+
+      }
+    }
+
+  </script>
+
+  <script src="animations.js" type="text/javascript"></script>
+
 </head>
 
 
@@ -28,7 +86,7 @@
 
     <div class="MainGroupOne" data-bg-text="V">
       <div class="ContentOne">
-        <div class="OneText">
+        <div class="OneText"><br><br><br><br>
           <h2>Hi, we're <span class="underline victoria"><a href="about.html" style="cursor:help;">ultraviolet</a>
             </span>
           </h2>
@@ -36,90 +94,98 @@
         </div>
       </div>
 
+      <div id="lineDrawing"> <svg width="100%" height="100%" viewBox="-234 0 1000 330" preserveAspectRatio="none">
+      <g fill="none" fill-rule="evenodd" stroke="#959719" stroke-width="1.5" class="lines" stroke-linecap="round" stroke-linejoin="round" >
+        <path d="M249.397496,4 C226.674482,25.5977059 199.671448,37.0957652 168.388394,38.4941777 C121.463815,40.5917966 36.9528801,38.7272465 11.2727608,129.624066 C-9.48069585,203.082576 32.0341077,234.386197 118.10018,234.386197 C154.587304,234.386197 213.509997,233.258076 245.055381,227.889407 C268.547091,223.891381 315.629587,215.848585 311.0321,180.912611 C306.033864,142.931373 242.212737,140.312586 235.558732,180.912611 C228.904727,221.512637 293.515814,250.697179 299.935714,253.322318 C362.722398,278.996207 389.98078,300.335984 402,346" id="Path-5"></path>
+      </g>
+    </svg> </div>
+
+
     </div>
 
 
-
+<br><br><br><br><br><br><br><br><br>
     <div class="MainGroupFour">
       <div class="ContentFour">
         <h1><span class="overline">All work</span></h1>
 
 
-                <div class="wideCard row" id="dailyuicard">
-                    <div class="col-md-6 order-md-2 card_graphics card_graphics0">
-                      <div class="card_image">
-                        <img src="images/news.png" alt="news app mockup" />
-                      </div>
+        <div class="wideCard row" id="dailyuicard">
+            <div class="col-md-6 order-md-2 card_graphics card_graphics0">
+              <div class="card_image">
+                <img src="images/news.png" alt="news app mockup" />
+              </div>
 
-                      <div id="morphing"> <svg width="100%" height="100%" viewbox="0 0 530 510">
-                            <g fill="none" fill-rule="evenodd">
-                              <g fill="#EB7C6E" fill-opacity=".15" transform="translate(0 6)">
-                                <path class="polymorph0" d="M238.272204,0.472936785 C319.32619,0.472936785 388.170478,82.7215699 437.615003,140.14786 C487.059527,197.57415 517.936277,240.998471 466.405485,297.836708 C414.874694,354.674946 395.653145,398.136424 287.5,405 C179.346855,411.863576 -82.4913249,295.929724 26.5161184,140.14786 C135.523562,-15.6340034 157.218219,0.472936785 238.272204,0.472936785 Z"></path>
-                              </g>
-                            </g>
-                      </svg> </div>
+              <div id="morphing"> <svg width="100%" height="100%" viewbox="0 0 530 510">
+                    <g fill="none" fill-rule="evenodd">
+                      <g fill="#EB7C6E" fill-opacity=".15" transform="translate(0 6)">
+                        <path class="polymorph0" d="M238.272204,0.472936785 C319.32619,0.472936785 388.170478,82.7215699 437.615003,140.14786 C487.059527,197.57415 517.936277,240.998471 466.405485,297.836708 C414.874694,354.674946 395.653145,398.136424 287.5,405 C179.346855,411.863576 -82.4913249,295.929724 26.5161184,140.14786 C135.523562,-15.6340034 157.218219,0.472936785 238.272204,0.472936785 Z"></path>
+                      </g>
+                    </g>
+              </svg> </div>
 
-                    </div>
-                    <div class="col-md-6 order-md-1 card_text">
-                      <div class="card_category"><h5>Product/UX Design</h5></div>
-                      <div class="card_title"><h2>News App Design</h2></div>
-                      <div class="card_description"><p>Designing an experience to help make it easier to develop well-rounded news reading habits.</p></div>
-                      <div class="card_link"><a href="news.html">Read more <span class="arrow">&xrarr;</span></a></div>
-                    </div>
+            </div>
+            <div class="col-md-6 order-md-1 card_text">
+              <div class="card_category"><h5>Product/UX Design</h5></div>
+              <div class="card_title"><h2>News App Design</h2></div>
+              <div class="card_description"><p>Designing an experience to help make it easier to develop well-rounded news reading habits.</p></div>
+              <div class="card_link"><a href="news.html">Read more <span class="arrow">&xrarr;</span></a></div>
+            </div>
 
-                  </div>
-
-
-
-                <div class="wideCard row" id="courseracard">
-                  <div class="col-md-6 card_graphics card_graphics1">
-                    <div class="card_image">
-                      <img src="images/mockup.png" alt="mockup" />
-                    </div>
-
-                    <div id="morphing"> <svg width="100%" height="100%" viewbox="0 0 530 510">
-                          <g fill="none" fill-rule="evenodd">
-                            <g fill="#33537A" fill-opacity=".15" transform="translate(0 6)">
-                              <path class="polymorph1" d="M401.445044,104.795283 C287.393052,20.2674518 83.3000132,-88.2682847 22.2721929,195.825256 C-38.7556274,479.918797 120.316888,556.443993 302.399893,458.411715 C484.482897,360.379437 522,323.867415 522,269.849629 C522,215.831843 515.497036,189.323115 401.445044,104.795283 Z" id="Path-4"></path>
-                            </g>
-                          </g>
-                    </svg> </div>
-
-                  </div>
-                  <div class="col-md-6 card_text">
-                    <div class="card_category"><h5>UX Design</h5></div>
-                    <div class="card_title"><h2>Coursera Redesign</h2></div>
-                    <div class="card_description"><p>Exploring ways to make Coursera's platform more conducive to social learning.</p></div>
-                    <div class="card_link"><a href="coursera.html">Read more <span class="arrow">&xrarr;</span></a></div>
-                  </div>
-                </div>
+          </div>
 
 
 
+          <div class="wideCard row" id="courseracard">
+            <div class="col-md-6 card_graphics card_graphics1">
+              <div class="card_image">
+                <img src="images/mockup.png" alt="mockup" />
+              </div>
 
-                <div class="wideCard row" id="inacard">
-                  <div class="col-md-6 order-md-2 card_graphics card_graphics2">
-                    <div class="card_image">
-                      <img src="images/ina.png" alt="ina" />
-                    </div>
+              <div id="morphing"> <svg width="100%" height="100%" viewbox="0 0 530 510">
+                    <g fill="none" fill-rule="evenodd">
+                      <g fill="#33537A" fill-opacity=".15" transform="translate(0 6)">
+                        <path class="polymorph1" d="M401.445044,104.795283 C287.393052,20.2674518 83.3000132,-88.2682847 22.2721929,195.825256 C-38.7556274,479.918797 120.316888,556.443993 302.399893,458.411715 C484.482897,360.379437 522,323.867415 522,269.849629 C522,215.831843 515.497036,189.323115 401.445044,104.795283 Z" id="Path-4"></path>
+                      </g>
+                    </g>
+              </svg> </div>
 
-                    <div id="morphing"> <svg width="100%" height="100%" viewbox="0 0 530 510">
-                          <g fill="none" fill-rule="evenodd">
-                            <g fill="#8F9130" fill-opacity=".15" transform="translate(0 6)">
-                              <path class="polymorph2" d="M127.546378,38.2125413 C25.5463782,64.2125413 56.5463782,130.212541 14.5463782,295.212541 C-6.68386292,378.61706 71.2300914,384.45368 146.334786,406.712541 C219.810467,428.48861 297.822106,518.567499 364.334786,457 C498.834786,332.5 407.546378,260.212541 396.046378,153.712541 C384.546378,47.2125413 229.546378,12.2125413 127.546378,38.2125413 Z"></path>
-                            </g>
-                          </g>
-                    </svg> </div>
+            </div>
+            <div class="col-md-6 card_text">
+              <div class="card_category"><h5>UX Design</h5></div>
+              <div class="card_title"><h2>Coursera Redesign</h2></div>
+              <div class="card_description"><p>Exploring ways to make Coursera's platform more conducive to social learning.</p></div>
+              <div class="card_link"><a href="coursera.html">Read more <span class="arrow">&xrarr;</span></a></div>
+            </div>
+          </div>
 
-                  </div>
-                  <div class="col-md-6 order-md-1 card_text">
-                    <div class="card_category"><h5>UX Research/Design</h5></div>
-                    <div class="card_title"><h2>INA: Conversational User Interface Design</h2></div>
-                    <div class="card_description"><p>A design for a voice-based CUI to support and facilitate healthy eating habits.</p></div>
-                    <div class="card_link"><a href="ina.html">Read more <span class="arrow">&xrarr;</span></a></div>
-                  </div>
 
-                </div>
+          <div class="wideCard row" id="inacard">
+            <div class="col-md-6 order-md-2 card_graphics card_graphics2">
+              <div class="card_image">
+                <img src="images/ina.png" alt="ina" />
+              </div>
+
+              <div id="morphing"> <svg width="100%" height="100%" viewbox="0 0 530 510">
+                    <g fill="none" fill-rule="evenodd">
+                      <g fill="#8F9130" fill-opacity=".15" transform="translate(0 6)">
+                        <path class="polymorph2" d="M127.546378,38.2125413 C25.5463782,64.2125413 56.5463782,130.212541 14.5463782,295.212541 C-6.68386292,378.61706 71.2300914,384.45368 146.334786,406.712541 C219.810467,428.48861 297.822106,518.567499 364.334786,457 C498.834786,332.5 407.546378,260.212541 396.046378,153.712541 C384.546378,47.2125413 229.546378,12.2125413 127.546378,38.2125413 Z"></path>
+                      </g>
+                    </g>
+              </svg> </div>
+
+            </div>
+            <div class="col-md-6 order-md-1 card_text">
+              <div class="card_category"><h5>UX Research/Design</h5></div>
+              <div class="card_title"><h2>INA: Conversational User Interface Design</h2></div>
+              <div class="card_description"><p>A design for a voice-based CUI to support and facilitate healthy eating habits.</p></div>
+              <div class="card_link"><a href="ina.html">Read more <span class="arrow">&xrarr;</span></a></div>
+            </div>
+
+          </div>
+
+
+
             </div>
           </div>
 
